correcting according to mentor's review